sumo me aggiunto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
+  <!-- SumoMe ! Condivisione Social Network -->
+  <script src="//load.sumome.com/" data-sumo-site-id="f518a2e853f64a4602e24e814e4aeccf73f0d9158f797b18687daf1889c6fa62" async="async"></script>
 </head>
 <body>
 
