--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>CityRal.li | The funniest things to do to visit the cities in Europe!</title>
+  <title>CityRal.li | The funniest way to do to visit the cities in Europe!</title>
   <meta name="description" content="Visit unique places, monuments and cities. Win discounts and enjoy your trip. The best travel you can ever have!"/>
 
   <!-- CSS  -->
@@ -165,7 +165,7 @@
       <div class="container">
         <div class="row center">
          <h3 class="col s12 light-blue-text shadow">Contact us</h3>
-         <div class="col s12 m2 offset-m2"><a class="light-blue-text shadow" href="mailto:"><i class="fa fa-envelope fa-4x"></i></a></div>
+         <div class="col s12 m2 offset-m2"><a class="light-blue-text shadow" href="mailto:info@cityral.li"><i class="fa fa-envelope fa-4x"></i></a></div>
          <div class="col s12 m2"><a class="light-blue-text shadow" href="https://www.facebook.com/CityRal.li"><i class="fa fa-facebook-square fa-4x"></i></a></div>
          <div class="col s12 m2"><a class="light-blue-text shadow" href="https://twitter.com/citiral_li"><i class="fa fa-twitter-square fa-4x"></i></a></div>
          <div class="col s12 m2"><a class="light-blue-text shadow" href="https://www.instagram.com/cityral.li/"><i class="fa fa-instagram fa-4x"></i></a></div>
@@ -191,6 +191,17 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+
+    <!-- Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-73962132-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </body>
 </html>
