--- a/index.html
+++ b/index.html
@@ -112,8 +112,20 @@
             <h3 class="col s12 light-blue-text shadow">Are you ready for a new adventure?</h3>
               <div class="row">
                 <div class="input-field col s12 m6 offset-m3">
-                  <input placeholder="Your email here" id="email" type="email" class="validate center white black-text">
-                  <button class="btn-reg waves-effect waves-light btn amber accent-4" type="submit" name="action"><b>Yes! Sign me up!</b></button>
+
+
+                  <!-- Begin MailChimp Signup Form -->
+                  <div id="mc_embed_signup">
+                    <form action="http://cityral.us12.list-manage.com/subscribe/post?u=d3a4c4f8b68ec288c0f50e7eb&amp;id=d96c9c78b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">               
+                          <input type="email" value="" name="EMAIL" class="email validate center white black-text" id="mce-EMAIL" placeholder="Insert here youre email address" required>
+                          <button class="btn-reg waves-effect waves-light btn amber accent-4" type="submit" name="action"><b>Yes! Sign me up!</b></button>
+                        </div>
+                    </form>
+                  </div>
+
+                    <!--End mc_embed_signup-->
+
                 </div>
               </div>
           </div>
