--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>CityRal.li | The funniest way to do to visit the cities in Europe!</title>
-  <meta name="description" content="Visit unique places, monuments and cities. Win discounts and enjoy your trip. The best travel you can ever have!"/>
+  <meta name="description" content="Visit unique places, monuments and cities. Eat traditional foods. Win discounts and enjoy your trip. The best travel you can ever have!"/>
 
   <!-- CSS  -->
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="col s12 m4">
               <div class="icon-block center">
-                <i class="fa fa-map-marker fa-4x light-blue-text icon-serv"></i>
+                <i class="fa fa-map fa-4x light-blue-text icon-serv"></i>
                 <h5 class="center">Discover the city</h5>
 
                 <p align="justify" class="light">Visit the city using our interactive maps, following unique routes.</p>
@@ -80,10 +80,10 @@
 
             <div class="col s12 m4">
               <div class="icon-block center">
-                <i class="fa fa-camera-retro fa-4x light-blue-text icon-serv"></i>
-                <h5 class="center">Photograph</h5>
+                <i class="fa fa-cutlery fa-4x light-blue-text icon-serv"></i>
+                <h5 class="center">Eat local foods</h5>
 
-                <p align="justify" class="light">Snap your best pictures to the point of interest marked on the map and send them us!</p>
+                <p align="justify" class="light">Eat traditional dishes in the best places known by the local residents.</p>
               </div>
             </div>
 
@@ -92,7 +92,7 @@
                 <i class="fa fa-trophy fa-4x light-blue-text icon-serv"></i>
                 <h5 class="center">Win prizes</h5>
 
-                <p align="justify" class="light">Make your trip unforgettable with the fantastic prizes you will receive!</p>
+                <p align="justify" class="light">Gain points and discounts that you can use during your travel!</p>
               </div>
             </div>
           </div>
@@ -204,16 +204,16 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
-    <!-- Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!-- Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-73962132-1', 'auto');
-      ga('send', 'pageview');
-    </script>
+    ga('create', 'UA-73962132-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 
   </body>
 </html>
