--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 		  
 		</div>
-		    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+		    <div class="parallax"><img src="background1.jpg" alt="what to do in madrid"></div>
 	</div>
 
 <!--   Servizio   -->
@@ -118,7 +118,7 @@
                   <div id="mc_embed_signup">
                     <form action="http://cityral.us12.list-manage.com/subscribe/post?u=d3a4c4f8b68ec288c0f50e7eb&amp;id=d96c9c78b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">               
-                          <input type="email" value="" name="EMAIL" class="email validate center white black-text" id="mce-EMAIL" placeholder="Insert here youre email address" required>
+                          <input type="email" value="" name="EMAIL" class="email validate center white black-text" id="mce-EMAIL" placeholder="Insert here your email address" required>
                           <button class="btn-reg waves-effect waves-light btn amber accent-4" type="submit" name="action"><b>Yes! Sign me up!</b></button>
                         </div>
                     </form>
@@ -132,7 +132,7 @@
         </div>
       </div>
     </div>
-      <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+      <div class="parallax"><img src="background2.jpg" alt="typical food madrid"></div>
   </div>
 
 
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="background3.jpg" alt="where eat in rome"></div>
   </div>
 
 <!-- footer -->
