open graph facebook

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>CityRal.li | The funniest way to do to visit the cities in Europe!</title>
+  <title>CityRal.li | The funniest things to do to visit the cities in Europe!</title>
   <meta name="description" content="Visit unique places, monuments and cities. Eat traditional foods. Win discounts and enjoy your trip. The best travel you can ever have!"/>
 
   <!-- CSS  -->
@@ -15,6 +15,13 @@
 
   <!-- SumoMe ! Condivisione Social Network -->
   <script src="//load.sumome.com/" data-sumo-site-id="f518a2e853f64a4602e24e814e4aeccf73f0d9158f797b18687daf1889c6fa62" async="async"></script>
+
+  <!-- FB Open Graph -->
+  <meta property="og:url"             content="http://cityral.li" /> 
+  <meta property="og:title"           content="CityRal.li | The funniest things to do to visit the cities in Europe!" /> 
+  <meta property="og:image"           content="empty89.github.io/CR_LP/CityRalli.png" /> 
+  <meta property="og:description"    content="Visit unique places, monuments and cities. Eat traditional foods. Win discounts and enjoy your trip. The best travel you can ever have!"/>
+  
 </head>
 <body>
 
