open graph facebook

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <!-- FB Open Graph -->
   <meta property="og:url"             content="http://cityral.li" /> 
   <meta property="og:title"           content="CityRal.li | The funniest things to do to visit the cities in Europe!" /> 
-  <meta property="og:image"           content="empty89.github.io/CR_LP/CityRalli.png" /> 
+  <meta property="og:image"           content="http://empty89.github.io/CR_LP/CityRalli.png" /> 
   <meta property="og:description"    content="Visit unique places, monuments and cities. Eat traditional foods. Win discounts and enjoy your trip. The best travel you can ever have!"/>
-  
+
 </head>
 <body>
 
