--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="col s12 m6">
               <div class="card">
                 <div class="card-image">
-                  <img src="madrid.jpg">
+                  <img src="madrid.jpg" alt="what to do in madrid">
                 </div>
                 <div class="center card-content">
                   <h2 class ="light-blue-text">Madrid</h2>
@@ -166,7 +166,7 @@
             <div class="col s12 m6">
               <div class="card">
                 <div class="card-image">
-                  <img src="rome.jpg">
+                  <img src="rome.jpg" alt="what to do in rome">
                 </div>
                 <div class="center card-content">
                   <h2 class ="light-blue-text">Rome</h2>
