--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="#register" class="amber-text text-accent-4">Register</a></li>
         <li><a href="#cities" class="amber-text text-accent-4">Cities</a></li>
         <li><a href="#contact" class="amber-text text-accent-4">Contact us</a></li>
+        <li><a href="http://blog.cityral.li" class="amber-text text-accent-4">Blog</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
@@ -43,6 +44,7 @@
         <li><a href="#register" class="amber-text text-accent-4">Register</a></li>
         <li><a href="#cities" class="amber-text text-accent-4">Cities</a></li>
         <li><a href="#contact" class="amber-text text-accent-4">Contact us</a></li>
+        <li><a href="http://blog.cityral.li" class="amber-text text-accent-4">Blog</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse amber-text text-accent-4"><i class="material-icons">menu</i></a>
     </div>
