--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>CityRal.li | The funniest things to do to visit the cities in Europe!</title>
-  <meta name="description" content="Visit unique places, monuments and cities. Eat traditional foods. Win discounts and enjoy your trip. The best travel you can ever have!"/>
+  <title>CityRal.li | Scopri le città più belle del mondo con occhi speciali!</title>
+  <meta name="description" content="Visita luoghi unici, monumenti e città. Mangia piatti locali. Vinci premi e goditi il viaggio!"/>
 
   <!-- CSS  -->
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
@@ -18,9 +18,9 @@
 
   <!-- FB Open Graph -->
   <meta property="og:url"             content="http://cityral.li" /> 
-  <meta property="og:title"           content="CityRal.li | The funniest things to do to visit the cities in Europe!" /> 
+  <meta property="og:title"           content="CityRal.li | Scopri le città più belle del mondo con occhi speciali!" /> 
   <meta property="og:image"           content="http://empty89.github.io/CR_LP/CityRalli.png" /> 
-  <meta property="og:description"    content="Visit unique places, monuments and cities. Eat traditional foods. Win discounts and enjoy your trip. The best travel you can ever have!"/>
+  <meta property="og:description"    content="Visita luoghi unici, monumenti e città. Mangia piatti locali. Vinci premi e goditi il viaggio!"/>
 
 </head>
 <body>
@@ -31,17 +31,19 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo amber-text text-accent-4">CityRal.li</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#how_it_works" class="amber-text text-accent-4">How it works</a></li>
-        <li><a href="#register" class="amber-text text-accent-4">Register</a></li>
-        <li><a href="#cities" class="amber-text text-accent-4">Cities</a></li>
-        <li><a href="#contact" class="amber-text text-accent-4">Contact us</a></li>
+        <li><a href="#how_it_works" class="amber-text text-accent-4">Come funziona</a></li>
+        <li><a href="#register" class="amber-text text-accent-4">Registrati</a></li>
+        <li><a href="#cities" class="amber-text text-accent-4">Città</a></li>
+        <li><a href="#contact" class="amber-text text-accent-4">Contattaci</a></li>
+        <li><a href="http://blog.cityral.li" class="amber-text text-accent-4">Blog</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#how_it_works" class="amber-text text-accent-4">How it works</a></li>
-        <li><a href="#register" class="amber-text text-accent-4">Register</a></li>
-        <li><a href="#cities" class="amber-text text-accent-4">Cities</a></li>
-        <li><a href="#contact" class="amber-text text-accent-4">Contact us</a></li>
+        <li><a href="#how_it_works" class="amber-text text-accent-4">Come funziona</a></li>
+        <li><a href="#register" class="amber-text text-accent-4">Registrati</a></li>
+        <li><a href="#cities" class="amber-text text-accent-4">Città</a></li>
+        <li><a href="#contact" class="amber-text text-accent-4">Contattaci</a></li>
+        <li><a href="http://blog.cityral.li" class="amber-text text-accent-4">Blog</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse amber-text text-accent-4"><i class="material-icons">menu</i></a>
     </div>
@@ -54,18 +56,18 @@
 		<div class="section no-pad-bot">
       <div class="container">
   		  <br><br>
-  		  <h1 class="header center light-blue-text shadow">Make your travel even more incredible</h1>
+  		  <h1 class="header center light-blue-text shadow">Rendi il tuo viaggio ancora più incredibile</h1>
   		  <div class="row center">
-  			 <h5 class="header-subtitle col s12 white-text shadow">Discover the city and win wonderful discounts!</h5>
+  			 <h5 class="header-subtitle col s12 white-text shadow">Visita la città e vinci fantastici premi!</h5>
   		  </div>
   		  <div class="row center">
-  			 <a href="#how_it_works" id="download-button" class="btn-large waves-effect waves-light amber accent-4"><b>Show me how it works</b></a>
+  			 <a href="#how_it_works" id="download-button" class="btn-large waves-effect waves-light amber accent-4"><b>Mostrami come funziona</b></a>
   		  </div>
   		  <br><br>
       </div>
 		  
 		</div>
-		    <div class="parallax"><img src="background1.jpg" alt="what to do in madrid"></div>
+		    <div class="parallax"><img src="background1.jpg" alt="cosa vedere a madrid"></div>
 	</div>
 
 <!--   Servizio   -->
@@ -79,27 +81,27 @@
             <div class="col s12 m4">
               <div class="icon-block center">
                 <i class="fa fa-map fa-4x light-blue-text icon-serv"></i>
-                <h5 class="center">Discover the city</h5>
+                <h5 class="center">Scopri la città</h5>
 
-                <p align="justify" class="light">Visit the city using our interactive maps, following unique routes.</p>
+                <p align="justify" class="light">Visita la zona usando le nostre mappe interattive, seguento percorsi unici!</p>
               </div>
             </div>
 
             <div class="col s12 m4">
               <div class="icon-block center">
                 <i class="fa fa-cutlery fa-4x light-blue-text icon-serv"></i>
-                <h5 class="center">Eat local foods</h5>
+                <h5 class="center">Prova i piatti tipici del posto</h5>
 
-                <p align="justify" class="light">Eat traditional dishes in the best places known by the local residents.</p>
+                <p align="justify" class="light">Mangia piatti tradizionali nei migliori locali conosciuti solo dai cittadini locali.</p>
               </div>
             </div>
 
             <div class="col s12 m4">
               <div class="icon-block center">
                 <i class="fa fa-trophy fa-4x light-blue-text icon-serv"></i>
-                <h5 class="center">Win prizes</h5>
+                <h5 class="center">Vinci premi</h5>
 
-                <p align="justify" class="light">Gain points and discounts that you can use during your travel!</p>
+                <p align="justify" class="light">Guadagn punti e sconti da usare durante il tuo viaggio!</p>
               </div>
             </div>
           </div>
@@ -116,7 +118,7 @@
         <div class="container">
           <div class="row center">
             <i class="material-icons large light-blue-text shadow">flight</i>
-            <h3 class="col s12 light-blue-text shadow">Are you ready for a new adventure?</h3>
+            <h3 class="col s12 light-blue-text shadow">Sei pronto per una nuova avventura?</h3>
               <div class="row">
                 <div class="input-field col s12 m6 offset-m3">
 
@@ -125,8 +127,8 @@
                   <div id="mc_embed_signup">
                     <form action="http://cityral.us12.list-manage.com/subscribe/post?u=d3a4c4f8b68ec288c0f50e7eb&amp;id=d96c9c78b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">               
-                          <input type="email" value="" name="EMAIL" class="email validate center white black-text" id="mce-EMAIL" placeholder="Insert here your email address" required>
-                          <button class="btn-reg waves-effect waves-light btn amber accent-4" type="submit" name="action"><b>Yes! Sign me up!</b></button>
+                          <input type="email" value="" name="EMAIL" class="email validate center white black-text" id="mce-EMAIL" placeholder="Inserisci qui il tuo indirizzo e-mail" required>
+                          <button class="btn-reg waves-effect waves-light btn amber accent-4" type="submit" name="action"><b>Si! Voglio saperne di più!</b></button>
                         </div>
                     </form>
                   </div>
@@ -139,7 +141,7 @@
         </div>
       </div>
     </div>
-      <div class="parallax"><img src="background2.jpg" alt="typical food madrid"></div>
+      <div class="parallax"><img src="background2.jpg" alt="piatti tipici di madrid"></div>
   </div>
 
 
@@ -149,7 +151,7 @@
     <div class="section">
       <div class="col-servizio">
         <div class="row center">
-         <h3 class="col s12 light-blue-text">Soon available in:</h3>
+         <h3 class="col s12 light-blue-text">Presto disponibile a:</h3>
           <div class="row">
             <div class="col s12 m6">
               <div class="card">
@@ -168,7 +170,7 @@
                   <img src="rome.jpg">
                 </div>
                 <div class="center card-content">
-                  <h2 class ="light-blue-text">Rome</h2>
+                  <h2 class ="light-blue-text">Roma</h2>
                 </div>
               </div>
             </div>
@@ -183,7 +185,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-         <h3 class="col s12 light-blue-text shadow">Contact us</h3>
+         <h3 class="col s12 light-blue-text shadow">Contattaci</h3>
          <div class="col s12 m2 offset-m2"><a class="light-blue-text shadow" href="mailto:info@cityral.li"><i class="fa fa-envelope fa-4x"></i></a></div>
          <div class="col s12 m2"><a class="light-blue-text shadow" href="https://www.facebook.com/CityRal.li"><i class="fa fa-facebook-square fa-4x"></i></a></div>
          <div class="col s12 m2"><a class="light-blue-text shadow" href="https://twitter.com/citiral_li"><i class="fa fa-twitter-square fa-4x"></i></a></div>
@@ -191,7 +193,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="where eat in rome"></div>
+    <div class="parallax"><img src="background3.jpg" alt="dove mangiare a roma"></div>
   </div>
 
 <!-- footer -->
@@ -199,7 +201,7 @@
     <div class="footer-copyright">
       <div class="row center">
         <div class="container col s12">
-        2016 &copy <a class="amber-text text-accent-4" href="#">CityRally</a>
+        2016 &copy <a class="amber-text text-accent-4" href="#">CityRal.li</a>
         </div>
       </div>  
     </div>
